--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,8 +1,10 @@
 <html>
     <head>
         <title>article-one|neethu.a.n</title>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class='container'>
         <div>
             <a href="/">Home</a>
         </div>
@@ -16,6 +18,7 @@
             <p>
                  this is the content of my fist html page.this is the content of my fist html page.this is the content of my fist html page.this is the content of my fist html page.this is the content of my fist html page.this is the content of my fist html page.this is the content of my fist html page.this is the content of my fist html page. this is the content of my fist html page.this is the content of my fist html page.this is the content of my fist html page.this is the content of my fist html page.this is the content of my fist html page.this is the content of my fist html page.this is the content of my fist html page.this is the content of my fist html page.
             </p>
+        </div>
         </div>
     </body>
     
