[imad-console] Updates ui/my_profile.html

--- a/ui/my_profile.html
+++ b/ui/my_profile.html
@@ -15,7 +15,7 @@
 	<div id="main-content">
 		<div id="left-column">
 			<div id="logo">
-			Welcome to Michael Scott's Webpage
+			Welcome to My Profile page
 			</div>
 			<div class="box">
         		<h1>What You'll Find Here</h1>
