--- a/ui/my_profile.html
+++ b/ui/my_profile.html
@@ -30,8 +30,7 @@
 			</div>
 			<h2>A Few of My Famous Quotes</h2>
 			<p>
-				<img src="http://img189.imageshack.us/img189/9177/paperru.jpg
-" width="139" height="150" style="margin: 0 10px 10px 0;float:left;" />
+				<img src="https://s-media-cache-ak0.pinimg.com/originals/8c/72/92/8c729286f7f894a9903c6e4478acffe4.jpg" />
 				<em>"That's what she said."</em> - Me<br/>
 				<em>"Would I rather be feared or loved? Easy, both. I want people to be afraid of how much they love me."</em> - Me<br/>
 				<em>"Wikipedia is the best thing ever. Anyone in the world can write anything they want about any subject, so you know you are getting the best possible information."</em> - Me<br/>
