[imad-console] Updates ui/my_profile.html

--- a/ui/my_profile.html
+++ b/ui/my_profile.html
@@ -15,10 +15,10 @@
 	<div id="main-content">
 		<div id="left-column">
 			<div id="logo">
-			Welcome to My Profile page
+			<h1>Welcome to My Profile page</h1>
 			</div>
 			<div class="box">
-        		<h1>What You'll Find Here</h1>
+        		<h5>What You'll Find Here</h5>
         		<p>This is my space. Here are some of my interests: </p>
 				<ul style="margin-top:10px;">
 					<li>Saying "That's what she said"</li>
