--- a/ui/my_profile.html
+++ b/ui/my_profile.html
@@ -12,10 +12,11 @@
 		<div id="bg"></div>
 	</div>
 	
+	<h1>Neethu</h1>
 	<div id="main-content">
 		<div id="left-column">
 			<div id="logo">
-			<h1>Welcome to My Profile page</h1>
+			<h2>Welcome to My Profile page</h1>
 			</div>
 			<div class="box">
         		<h5>What You'll Find Here</h5>
