--- a/ui/my_profile.html
+++ b/ui/my_profile.html
@@ -23,7 +23,7 @@
 			</div>
 			<div class="box">
         		<h3>What You'll Find Here</h3>
-        		<p>This is my space. Here are some of my interests: </p>
+        		<p>This is my space. This is my objective </p>
 				<ul style="margin-top:10px;">
 					<li>Saying "That's what she said"</li>
 					<li>Writing song parodies</li>
