[imad-console] Updates ui/my_profile.html

--- a/ui/my_profile.html
+++ b/ui/my_profile.html
@@ -24,13 +24,14 @@
 			<div class="box">
         		<h3>What You'll Find Here</h3>
         		<p>This is my space. This is my objective </p>
-				<ul style="margin-top:10px;">
+        		
+				<!--<ul style="margin-top:10px;">
 					<li>Saying "That's what she said"</li>
 					<li>Writing song parodies</li>
 					<li>Playing ice hockey</li>
 					<li>Wearing jeans</li>
 					<li>Chrysler cars</li>
-				</ul>
+				</ul>-->
 			</div>
 			<h2>A Few of My Famous Quotes</h2>
 			<p>
