--- a/ui/my_profile.html
+++ b/ui/my_profile.html
@@ -24,7 +24,9 @@
 			<div class="box">
         		<h3>What You'll Find Here</h3>
         		<p>This is my space. This is my objective </p>
-        		
+        		<p style="margin-top:10px;">
+        		    
+        		</p>
 				<!--<ul style="margin-top:10px;">
 					<li>Saying "That's what she said"</li>
 					<li>Writing song parodies</li>
