--- a/ui/my_profile.html
+++ b/ui/my_profile.html
@@ -25,7 +25,7 @@
         		<h3>What You'll Find Here</h3>
         		<p>This is my space. This is my objective </p>
         		<p style="margin-top:10px;">
-        		    
+        		    Work in challenging environment so as to leverage my ideas for fulfilling my ambition to gain great technical mastery in the field.
         		</p>
 				<!--<ul style="margin-top:10px;">
 					<li>Saying "That's what she said"</li>
