[imad-console] Updates ui/my_profile.html

--- a/ui/my_profile.html
+++ b/ui/my_profile.html
@@ -23,7 +23,7 @@
 			</div>
 			<div class="box">
         		<h3>What You'll Find Here</h3>
-        		<p>This is my space. This is my objective </p>
+        		<h6><p>This is my space. This is my objective </p></h6>
         		<p style="margin-top:10px;">
         		    Work in challenging environment so as to leverage my ideas for fulfilling my ambition to gain great technical mastery in the field.
         		</p>
