--- a/ui/my_profile.html
+++ b/ui/my_profile.html
@@ -35,7 +35,7 @@
 					<li>Chrysler cars</li>
 				</ul>-->
 			</div>
-			<h2>A Few of My Famous Quotes</h2>
+			<h2>Education</h2>
 			<p>
 				
 				<em>"That's what she said."</em> - Me<br/>
