[imad-console] Updates ui/my_profile.html

--- a/ui/my_profile.html
+++ b/ui/my_profile.html
@@ -36,13 +36,20 @@
 				</ul>-->
 			</div>
 			<h2>Education</h2>
-			<p>
+			
+			<ul style="margin-top:10px;">
+					<li>Saying "That's what she said"</li>
+					<li>Writing song parodies</li>
+					<li>Playing ice hockey</li>
+					<li>Wearing jeans</li>
+					<li>Chrysler cars</li>
+				</ul>    
 				
-				<em>"That's what she said."</em> - Me<br/>
+			<!--	<em>"That's what she said."</em> - Me<br/>
 				<em>"Would I rather be feared or loved? Easy, both. I want people to be afraid of how much they love me."</em> - Me<br/>
 				<em>"Wikipedia is the best thing ever. Anyone in the world can write anything they want about any subject, so you know you are getting the best possible information."</em> - Me<br/>
 				<em>"I am Michael, and I am part English, Irish, German, and Scottish, sort of a virtual United Nations."</em> - Me<br/>
-			</p>
+			</p>-->
 		</div>
 		<div id="right-column">
 			<div id="main-image"><img src="http://img38.imageshack.us/img38/7065/michaelscotto.jpg
