--- a/ui/my_profile.html
+++ b/ui/my_profile.html
@@ -38,7 +38,9 @@
 			<h2>Education</h2>
 			
 			<ul style="margin-top:10px;">
-					<li>Saying "That's what she said"</li>
+					<li>MTech-Computer Science-College of Engineering
+Trivandrum-2016
+</li>
 					<li>Writing song parodies</li>
 					<li>Playing ice hockey</li>
 					<li>Wearing jeans</li>
