[imad-console] Updates ui/my_profile.html

--- a/ui/my_profile.html
+++ b/ui/my_profile.html
@@ -41,8 +41,12 @@
 					<li>MTech-Computer Science-College of Engineering
 Trivandrum-2016
 </li>
-					<li>Writing song parodies</li>
-					<li>Playing ice hockey</li>
+					<li>B.Tech-Computer Science and
+Engineering-LBS institute of technology for women, Poojappura-2014
+</li>
+					<li>12th Grade-Carmel G.H.S.S
+Trivandrum-2010
+</li>
 					<li>Wearing jeans</li>
 					<li>Chrysler cars</li>
 				</ul>    
