--- a/ui/my_profile.html
+++ b/ui/my_profile.html
@@ -58,8 +58,8 @@ Trivandrum-2010
 			</p>-->
 		</div>
 		<div id="right-column">
-			<div id="main-image"><img src="http://img38.imageshack.us/img38/7065/michaelscotto.jpg
-" width="160" height="188" /></div>
+		<!--	<div id="main-image"><img src="http://img38.imageshack.us/img38/7065/michaelscotto.jpg
+" width="160" height="188" /></div-->
 			<div class="sidebar">
 				<h3>Blurb About Me</h3>
 				<p>My name is Michael Scott. And I love Dunder Mifflin and Dwight Schrute.</p>
