[imad-console] Updates ui/my_profile.html

--- a/ui/my_profile.html
+++ b/ui/my_profile.html
@@ -8,7 +8,7 @@
 <div id="wrapper">
     
 	<div id="header">
-		<div id="nav"><a href="index.html">Home</a> | <a href="#">About Me</a> | <a href="#">Contact Me</a> | <a href="#">My Photos</a> | <a href="#">My Videos</a></div>
+		<div id="nav"><a href="index.html">Home</a> | <a href="#">About Me</a> | <a href="#">Contact Me</a> | <a href="#">My Photos</a> | <a href="#">CV</a></div>
 		<div id="bg"></div>
 	</div>
 	<img src="https://s-media-cache-ak0.pinimg.com/originals/8c/72/92/8c729286f7f894a9903c6e4478acffe4.jpg
@@ -62,7 +62,7 @@ Trivandrum-2010
 " width="160" height="188" /></div-->
 			<div class="sidebar">
 				<h3>Blurb About Me</h3>
-				<p>My name is Michael Scott. And I love Dunder Mifflin and Dwight Schrute.</p>
+				<p>My name is Neethu. And I love Dunder Mifflin and Dwight Schrute.</p>
 				<h3>Find Me Elsewhere</h3>
 				<div class="box">
 					<ul>
